--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -3,8 +3,8 @@ import WaitlistForm from "../WaitlistForm";
 ---
 
 <div class="min-h-[calc(95vh-70px)] flex flex-col wrap-balance">
-  <div class="flex-1 flex flex-col lg:justify-center">
-    <div class="py-5 pb-0 container xl:text-center">
+  <div class="flex-1 flex flex-col md:justify-center">
+    <div class="py-6 pb-0 container xl:text-center">
       <h1 class="text-6xl md:text-8xl font-bold mb-8">
         The Talent Rep for Every Creator
       </h1>
