--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,17 +15,23 @@ import "../styles/global.css";
   </head>
   <body class="dark:bg-slate-900 bg-slate-100 dark:text-white">
     <nav
-      class="h-[60px] lg:h-[70px] border-b border-slate-400 flex items-center container font-mono text-sm"
+      class="min-h-[60px] lg:min-h-[70px] border-b border-slate-400 flex items-center container font-mono text-sm"
     >
-      <div class="flex-1"><a href="/" class="text-base">Repbot</a></div>
+      <div class="flex-1"><a href="/">Repbot</a></div>
       <div class="flex items-center gap-6">
         <!-- <a href="/about">about</a> -->
         <!-- <a href="/roadmap">roadmap</a> -->
-        <a href={DISCORD_LINK} target="_blank">discord</a>
+        <a
+          href={DISCORD_LINK}
+          target="_blank"
+          class="py-3 hover:underline hover:opacity-80">discord</a
+        >
       </div>
     </nav>
     <slot />
-    <footer class="container text-center min-h-[40px] font-mono text-sm py-3">
+    <footer
+      class="container text-center min-h-[40px] font-mono text-sm py-4 dark:bg-slate-800"
+    >
       Made with ❤️ by some internet radicals.
     </footer>
   </body>
