Fix footer no container

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ import "../styles/global.css";
     </nav>
     <slot />
     <footer
-      class="container text-center min-h-[40px] font-mono text-sm py-4 dark:bg-slate-800"
+      class="text-center min-h-[40px] font-mono text-sm py-4 dark:bg-slate-800"
     >
       Made with ❤️ by some internet radicals.
     </footer>
