Update general container size

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -24,7 +24,7 @@ import WaitlistForm from "../WaitlistForm";
       <WaitlistForm client:load />
     </div>
   </div>
-  <div class="container-small mb-5">
+  <div class="container mb-5">
     <p class="font-bold dark:text-slate-300 text-slate-700">
       We exist to help you...
     </p>
