--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ export const prerender = true;
     <Hero />
     <div class="flex flex-col gap-16 mb-16">
       <div
-        class="container-small py-6 flex flex-col justify-center mt-2 wrap-balance"
+        class="container py-6 flex flex-col justify-center mt-2 wrap-balance"
       >
         <h2 class="text-5xl font-bold mb-4">
           👋 Say Goodbye to Sh*t Affiliate Deals from Russian Mobile Game
@@ -31,7 +31,7 @@ export const prerender = true;
           deal in your life, hiding them is just a click away.
         </Paragraph>
       </div>
-      <div class="container-small py-6 wrap-balance">
+      <div class="container py-6 wrap-balance">
         <h2 class="text-5xl font-bold mb-4">
           💪 Maximize Your Sponsorship Revenue with a Ruthless, Informed
           Negotiator.
@@ -47,7 +47,7 @@ export const prerender = true;
           fair pay.
         </Paragraph>
       </div>
-      <div class="container-small py-6 wrap-balance">
+      <div class="container py-6 wrap-balance">
         <h2 class="text-5xl font-bold mb-4">
           ⚖️ Compare Deals at a Glance, Accept the Best Fit, & Get Back to Work.
         </h2>
@@ -62,7 +62,7 @@ export const prerender = true;
           run your business.
         </Paragraph>
       </div>
-      <div class="container-small py-6 wrap-balance">
+      <div class="container py-6 wrap-balance">
         <h2 class="text-5xl font-bold mb-4">🔥 Fire Us Whenever.</h2>
         <Paragraph>
           <code>Repbot</code> exists so that you never have to sign with a
@@ -90,7 +90,7 @@ export const prerender = true;
         <WaitlistForm client:visible />
       </div>
     </div>
-    <div class="py-6 container-small my-12">
+    <div class="py-6 container my-12">
       <h2 class="text-4xl font-bold mb-4">🤔 FAQs</h2>
       <FAQ client:visible />
     </div>
@@ -101,7 +101,7 @@ export const prerender = true;
   .wrap-balance {
     text-wrap: balance;
   }
-  .container-small {
+  .container {
     @apply px-4 md:px-8 mx-auto max-w-4xl w-full;
   }
 </style>
