--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,7 +76,7 @@ export const prerender = true;
       </div>
     </div>
     <div
-      class="bg-slate-800 text-white dark py-24 px-2 flex flex-col items-center gap-6"
+      class="bg-slate-800 text-white dark py-24 px-4 md:px-8 flex flex-col items-center gap-6"
     >
       <h1
         class="text-5xl lg:text-6xl font-bold text-center wrap-balance max-w-4xl"
