Add link to FAQ

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,9 +18,10 @@ import "../styles/global.css";
       class="min-h-[60px] lg:min-h-[70px] border-b border-slate-400 flex items-center container font-mono text-sm"
     >
       <div class="flex-1"><a href="/">Repbot</a></div>
-      <div class="flex items-center gap-6">
+      <div class="flex items-center gap-6 lowercase">
         <!-- <a href="/about">about</a> -->
         <!-- <a href="/roadmap">roadmap</a> -->
+        <a href="#faq">faqs</a>
         <a
           href={DISCORD_LINK}
           target="_blank"
