--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,7 +90,7 @@ export const prerender = true;
         <WaitlistForm client:visible />
       </div>
     </div>
-    <div class="py-6 container my-12">
+    <div class="py-6 container my-20" id="faq">
       <h2 class="text-4xl font-bold mb-4">🤔 FAQs</h2>
       <FAQ client:visible />
     </div>
