--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,7 @@ export const prerender = true;
       >
         🥊 You Deserve Someone In Your Corner.
       </h1>
-      <h3 class="text-2xl text-center wrap-balance">
+      <h3 class="text-2xl text-center wrap-balance text-slate-200">
         Join a community that's fighting for your business.
       </h3>
       <div class="w-full flex justify-center mt-4">
