--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,10 +15,10 @@ import "../styles/global.css";
   </head>
   <body class="dark:bg-slate-900 bg-slate-100 dark:text-white">
     <nav
-      class="min-h-[60px] lg:min-h-[70px] border-b border-slate-400 flex items-center container font-mono text-sm"
+      class="min-h-[60px] lg:min-h-[70px] border-b border-slate-400 flex items-center container font-mono text-sm md:text-base"
     >
       <div class="flex-1">
-        <a href="/" class="flex items-center gap-2"
+        <a href="/" class="flex items-center gap-2 md:gap-3"
           ><div>
             <svg
               width="30"
@@ -35,12 +35,12 @@ import "../styles/global.css";
       </div>
       <div class="flex items-center gap-6 lowercase">
         <!-- <a href="/about">about</a> -->
-        <!-- <a href="/roadmap">roadmap</a> -->
+        <!-- <a href="/blog">blog</a> -->
         <a href="#faq" class="py-3 hover:underline hover:opacity-80">faqs</a>
         <a
           href={DISCORD_LINK}
           target="_blank"
-          class="py-3 hover:underline hover:opacity-80">discord</a
+          class="py-3 hover:underline hover:opacity-80">chat</a
         >
       </div>
     </nav>
