--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ export const prerender = true;
 <Layout>
   <main class="dark:text-white text-lg">
     <Hero />
-    <div class="flex flex-col gap-[25vh] mb-[25vh]">
+    <div class="flex flex-col gap-10 mb-10 md:gap-[25vh] md:mb-[25vh]">
       <div
         class="container py-6 flex flex-col justify-center mt-2 wrap-balance"
       >
