Update hero with getting started

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -2,30 +2,30 @@
 import WaitlistForm from "../WaitlistForm";
 ---
 
-<div class="min-h-[calc(95vh-70px)] flex flex-col wrap-balance">
-  <div class="flex-1 flex flex-col md:justify-center">
-    <div class="py-6 pb-0 container xl:text-center">
-      <h1 class="text-6xl md:text-8xl font-bold mb-8">
+<div class="wrap-balance flex min-h-[calc(95vh-70px)] flex-col">
+  <div class="flex flex-1 flex-col md:justify-center">
+    <div class="container py-6 pb-0 xl:text-center">
+      <h1 class="mb-8 text-6xl font-bold md:text-8xl">
         The Talent Rep for Every Creator
       </h1>
-      <p class="text-2xl md:text-3xl mb-4 dark:text-slate-200">
+      <p class="mb-4 text-2xl dark:text-slate-200 md:text-3xl">
         <code>Repbot</code> does 80% of what a talent manager does - <b
           ><i>without</i></b
         >
          taking a 20% commission on your brand deals.
       </p>
-      <p class="text-2xl md:text-3xl mb-4 dark:text-slate-200">
+      <p class="mb-4 text-2xl dark:text-slate-200 md:text-3xl">
         We qualify your inbound leads, negotiate better rates, and help you
         spend more time on the creative part of being a creator.
       </p>
     </div>
-    <div class="py-10 container xl:flex xl:flex-col xl:items-center">
-      <h3 class="text-xl uppercase font-bold mb-4">👇 Join The Waitlist</h3>
+    <div class="container py-10 xl:flex xl:flex-col xl:items-center">
+      <h3 class="mb-4 text-xl font-bold uppercase">👇 Let's get started</h3>
       <WaitlistForm client:load />
     </div>
   </div>
   <div class="container mb-5">
-    <p class="font-bold dark:text-slate-300 text-slate-700">
+    <p class="font-bold text-slate-700 dark:text-slate-300">
       We exist to help you...
     </p>
   </div>
