Updates to headings

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -14,13 +14,9 @@ import WaitlistForm from "../WaitlistForm";
         >
          taking a 20% commission on your brand deals.
       </p>
-      <p class="mb-4 text-2xl dark:text-slate-200 md:text-3xl">
-        We qualify your inbound leads, negotiate better rates, and help you
-        spend more time on the creative part of being a creator.
-      </p>
     </div>
     <div class="container py-10 xl:flex xl:flex-col xl:items-center">
-      <h3 class="mb-4 text-xl font-bold uppercase">👇 Let's get started</h3>
+      <h3 class="mb-4 text-xl font-bold uppercase">👇 Get Representation</h3>
       <WaitlistForm client:load />
     </div>
   </div>
