--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,7 @@ export const prerender = true;
       <div class="wrap-balance container mt-2 py-6">
         <div class="flex flex-col gap-6 md:flex-row md:items-start">
           <div class="md:flex-1">
-            <h2 class="mb-4 text-5xl font-bold">
-              💪 Maximize Your Sponsorship Revenue with a Polite, Informed
-              Negotiator.
-            </h2>
+            <h2 class="mb-4 text-5xl font-bold">🤝 Negotiate With Brands.</h2>
             <Paragraph>
               <code>Repbot</code> automatically negotiates higher rates from
               brands on your behalf. You tell us your minimum rate and social
@@ -43,7 +40,7 @@ export const prerender = true;
         <div class="flex flex-col gap-6 md:flex-row md:items-start">
           <div class="md:flex-1">
             <h2 class="mb-4 text-5xl font-bold">
-              👋 Say Goodbye to Sh*t Deals from NFT Mobile Game Grifters.
+              ✨ Make Deals On Your Terms.
             </h2>
             <Paragraph>
               <code>Repbot</code> asks brands for the important details <i
@@ -62,9 +59,7 @@ export const prerender = true;
         </div>
       </div>
       <div class="wrap-balance container py-6">
-        <h2 class="mb-4 text-5xl font-bold">
-          ⚖️ Compare Deals at a Glance, Accept the Best Fit, & Get Back to Work.
-        </h2>
+        <h2 class="mb-4 text-5xl font-bold">💪 Be Open For Business.</h2>
         <Paragraph>
           <code>Repbot</code> gives you an easy way to read and review your
           inbound brand deals. When one catches your eye, all you have to do is
@@ -77,7 +72,7 @@ export const prerender = true;
         </Paragraph>
       </div>
       <div class="wrap-balance container py-6">
-        <h2 class="mb-4 text-5xl font-bold">🔥 Fire Us Whenever.</h2>
+        <h2 class="mb-4 text-5xl font-bold">🔥 And Fire Us Whenever.</h2>
         <Paragraph>
           <code>Repbot</code> exists so that you never have to sign with a
           manager that will take 15% of your business in exchange for barely
